fixed issue with main logo on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -189,7 +189,8 @@ body {
     float: left; }
 
 #smallScreenLogo {
-  display: none; }
+  display: none;
+  width: 100% !important; }
 
 .fixedScenery {
   background: url("../img/jpg/Scenery.jpg") no-repeat center center;
@@ -283,7 +284,7 @@ body {
   flex-direction: column;
   justify-content: center;
   margin: 10px; }
-#indexPage #introSection > div > div > img {
+#indexPage #introSection img {
   width: 100%;
   max-height: 450px;
   margin: inherit auto; }
