--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -1,6 +1,7 @@
 //INDEX 
 #smallScreenLogo {
     display: none;
+    width: 100%!important;
 }
 
 .fixedScenery {
@@ -70,15 +71,15 @@
                 padding: inherit 5px;
             }
             #welcomeSection {
-                    pre {
-                        display: inline-block;
-                        padding: 0 50px;
-                        margin: auto;
-                        border: inherit;
-                        background-color: inherit;
-                        font-family: inherit;
-                        font-size: inherit;
-                    }
+                pre {
+                    display: inline-block;
+                    padding: 0 50px;
+                    margin: auto;
+                    border: inherit;
+                    background-color: inherit;
+                    font-family: inherit;
+                    font-size: inherit;
+                }
                 h1 {
                     margin-bottom: 10px;
                     color: $colHighlight;
@@ -130,7 +131,7 @@
             justify-content: center;
             margin: 10px;
         }
-        > div > div >img {
+        img {
             width: 100%;
             max-height: 450px;
             margin: inherit auto;
